--- a/tests/integration/specs/killnode_test.toml
+++ b/tests/integration/specs/killnode_test.toml
@@ -11,12 +11,14 @@ actions = ["Kill_Node node2 500"]
     work_dir = "/tmp"
     random_seed = 0
     operation_mode = "Simulated"
-    protocol = "NaiveRouting"
+    [initial_nodes.node1.position]
     x = 0.0
     y = 0.0
     [initial_nodes.node1.velocity]
         x = 0.0
         y = 0.0
+    [initial_nodes.node1.protocol]
+        Protocol = "NaiveRouting"
     [initial_nodes.node1.radio_short]
         reliability = 1.0
         interface_name = "wlan0"
@@ -31,12 +33,14 @@ actions = ["Kill_Node node2 500"]
     work_dir = "/tmp"
     random_seed = 456
     operation_mode = "Simulated"
-    protocol = "NaiveRouting"
+    [initial_nodes.node2.position]
     x = 0.0
     y = 0.0
     [initial_nodes.node2.velocity]
         x = 0.0
         y = 0.0
+    [initial_nodes.node2.protocol]
+            Protocol = "NaiveRouting"
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
@@ -51,12 +55,14 @@ actions = ["Kill_Node node2 500"]
     work_dir = "/tmp"
     random_seed = 789
     operation_mode = "Simulated"
-    protocol = "NaiveRouting"
+    [initial_nodes.node3.position]
     x = 0.0
     y = 0.0
     [initial_nodes.node3.velocity]
         x = 0.0
         y = 0.0
+    [initial_nodes.node3.protocol]
+                Protocol = "NaiveRouting"
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
