--- a/tests/integration/specs/radio_broadcast_timing.toml
+++ b/tests/integration/specs/radio_broadcast_timing.toml
@@ -9,12 +9,14 @@ actions = ["ping node1 node5 1000 "]
     work_dir = "/tmp/basic_gossip_test508734988"
     random_seed = 12
     operation_mode = "Simulated"
-    protocol = "NaiveRouting"
+    [initial_nodes.node1.position]
     x = 0.0
     y = 0.0
     [initial_nodes.node1.velocity]
         x = 0.0
         y = 0.0
+    [initial_nodes.node1.protocol]
+        Protocol = "NaiveRouting"
     [initial_nodes.node1.radio_short]
         reliability = 1.0
         interface_name = "wlan0"
@@ -25,13 +27,15 @@ actions = ["ping node1 node5 1000 "]
     work_dir = "/tmp/basic_gossip_test508734988"
     random_seed = 34
     operation_mode = "Simulated"
-    protocol = "NaiveRouting"
+    [initial_nodes.node2.position]
     x = -60.0
     y = 0.0
     [initial_nodes.node2.velocity]
         x = 0.0
         y = 0.0
-    [initial_nodes.node2.radio_short] 
+    [initial_nodes.node2.protocol]
+            Protocol = "NaiveRouting"
+    [initial_nodes.node2.radio_short]
         reliability = 1 
         interface_name = "wlan0" 
         range = 100.0
@@ -42,13 +46,15 @@ actions = ["ping node1 node5 1000 "]
     work_dir = "/tmp/basic_gossip_test508734988"
     random_seed = 56
     operation_mode = "Simulated"
-    protocol = "NaiveRouting"
+    [initial_nodes.node3.position]
     x = 0.0
     y = -60.0
     [initial_nodes.node3.velocity]
         x = 0.0
         y = 0.0
-    [initial_nodes.node3.radio_short] 
+    [initial_nodes.node3.protocol]
+            Protocol = "NaiveRouting"
+    [initial_nodes.node3.radio_short]
         reliability = 1 
         range = 100.0
         interface_name = "wlan0" 
@@ -58,13 +64,15 @@ actions = ["ping node1 node5 1000 "]
     work_dir = "/tmp/basic_gossip_test508734988"
     random_seed = 78
     operation_mode = "Simulated"
-    protocol = "NaiveRouting"
+    [initial_nodes.node4.position]
     x = 60.0
     y = 0.0
     [initial_nodes.node4.velocity]
         x = 0.0
         y = 0.0
-    [initial_nodes.node4.radio_short] 
+    [initial_nodes.node4.protocol]
+            Protocol = "NaiveRouting"
+    [initial_nodes.node4.radio_short]
         reliability = 1 
         range = 100.0
         interface_name = "wlan0" 
@@ -74,13 +82,15 @@ actions = ["ping node1 node5 1000 "]
     work_dir = "/tmp/basic_gossip_test508734988"
     random_seed = 90
     operation_mode = "Simulated"
-    protocol = "NaiveRouting"
+    [initial_nodes.node5.position]
     x = 0.0
     y = 60.0
     [initial_nodes.node5.velocity]
         x = 0.0
         y = 0.0
-    [initial_nodes.node5.radio_short] 
+    [initial_nodes.node5.protocol]
+            Protocol = "NaiveRouting"
+    [initial_nodes.node5.radio_short]
         reliability = 1 
         range = 100.0
         interface_name = "wlan0" 
