--- a/tests/integration/specs/mac_layer_basic.toml
+++ b/tests/integration/specs/mac_layer_basic.toml
@@ -10,6 +10,8 @@ actions = [ "Ping node1 node25 1000",
 ]
 width = 300.0
 height = 300.0
+[protocol]
+Protocol = "NaiveRouting"
 
 [initial_nodes.node21]
 worker_name = "node21"
