--- a/tests/integration/specs/killnode_test.toml
+++ b/tests/integration/specs/killnode_test.toml
@@ -5,6 +5,8 @@ duration = 1500
 width = 200
 height = 200
 actions = ["Kill_Node node2 500"]
+[protocol]
+Protocol = "NaiveRouting"
 
 [initial_nodes.node1]
     worker_name = "node1"
