--- a/tests/integration/specs/random_waypoint_test.toml
+++ b/tests/integration/specs/random_waypoint_test.toml
@@ -4,6 +4,8 @@ actions = []
 width = 200.0
 height = 200.0
 mobility_model = "RandomWaypoint"
+[protocol]
+Protocol = "NaiveRouting"
 
 [initial_nodes.node5]
 worker_name = "node5"
