--- a/tests/integration/specs/rgrI_route_discovery_optimization.toml
+++ b/tests/integration/specs/rgrI_route_discovery_optimization.toml
@@ -15,6 +15,10 @@ actions = ["Add_Source node21 node43 1 64 8000 1000",
            ]
 width = 400.0
 height = 400.0
+[protocol]
+Protocol = "ReactiveGossip"
+k = 2
+p = 0.5
 
 [initial_nodes.node22]
 worker_name = "node22"
