--- a/tests/integration/specs/rgr_basic_test.toml
+++ b/tests/integration/specs/rgr_basic_test.toml
@@ -325,6 +325,10 @@ y = 0.0
 reliability = 1
 interface_name = "wlan0"
 range = 100.0
+[protocol]
+Protocol = "ReactiveGossip"
+k = 2
+p = 0.70
 
 [initial_nodes.node17]
 worker_name = "node17"
