--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ color-backtrace = "0.1.3"
 libc = "0.2.55"
 sx1276 = { git = "https://github.com/doctorn/sx1276"}
 chrono = "0.4.7"
+bitflags = "1.1.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-embedded-hal = "0.2.2"
