--- a/tests/experiments/specs/lora_wifi_beacon_placement/rogue12.toml
+++ b/tests/experiments/specs/lora_wifi_beacon_placement/rogue12.toml
@@ -3,12 +3,17 @@ worker_id = "a6c7e11b879366bdd39ab0c8ec903b8a"
 work_dir = "/tmp/lora_wifi_beacon_placement307062120"
 random_seed = 1898157074
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+
+[position]
 x = 0.0 #ignored
 y = 0.0 #ignored
+
 [velocity]
 x = 0.0
 y = 0.0
+
+[protocol]
+Protocol = "LoraWifiBeacon"
 
 [radio_short]
 reliability = 1.0 #ignored
