--- a/tests/experiments/specs/lora_wifi_beacon_placement/rogue16.toml
+++ b/tests/experiments/specs/lora_wifi_beacon_placement/rogue16.toml
@@ -3,12 +3,17 @@ worker_id = "f80b66a8e195f5d24721fd6eceb07d9a"
 work_dir = "/tmp/lora_wifi_beacon_placement307062120"
 random_seed = 1489921101
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+
+[position]
 x = 0.0 #ignored
 y = 0.0 #ignored
+
 [velocity]
 x = 0.0
 y = 0.0
+
+[protocol]
+Protocol = "LoraWifiBeacon"
 
 [radio_short]
 reliability = 1.0 #ignored
