--- a/tests/experiments/specs/lora_wifi_beacon_placement/rogue18.toml
+++ b/tests/experiments/specs/lora_wifi_beacon_placement/rogue18.toml
@@ -3,12 +3,17 @@ worker_id = "14addc0031059a53aafe676c0181dae0"
 work_dir = "/tmp/lora_wifi_beacon_placement307062120"
 random_seed = 746997943
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+
+[position]
 x = 0.0 #ignored
 y = 0.0 #ignored
+
 [velocity]
 x = 0.0
 y = 0.0
+
+[protocol]
+Protocol = "LoraWifiBeacon"
 
 [radio_short]
 reliability = 1.0 #ignored
