--- a/tests/experiments/specs/lora_wifi_beacon_placement/rogue19.toml
+++ b/tests/experiments/specs/lora_wifi_beacon_placement/rogue19.toml
@@ -3,12 +3,17 @@ worker_id = "069ddcecc6c319819c70c955b6a93650"
 work_dir = "/tmp/lora_wifi_beacon_placement307062120"
 random_seed = 1033369014
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+
+[position]
 x = 0.0 #ignored
 y = 0.0 #ignored
+
 [velocity]
 x = 0.0
 y = 0.0
+
+[protocol]
+Protocol = "LoraWifiBeacon"
 
 [radio_short]
 reliability = 1.0 #ignored
