--- a/tests/experiments/specs/lora_wifi_beacon_placement/rogue9.toml
+++ b/tests/experiments/specs/lora_wifi_beacon_placement/rogue9.toml
@@ -3,12 +3,17 @@ worker_id = "f68dab202437b4dcd986616dc6f5920c"
 work_dir = "/tmp/lora_wifi_beacon_placement307062120"
 random_seed = 3395382296
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+
+[position]
 x = 0.0 #ignored
 y = 0.0 #ignored
+
 [velocity]
 x = 0.0
 y = 0.0
+
+[protocol]
+Protocol = "LoraWifiBeacon"
 
 [radio_short]
 reliability = 1.0 #ignored
