--- a/tests/experiments/specs/MR_Paper/500_nodes/gossip_routing.toml
+++ b/tests/experiments/specs/MR_Paper/500_nodes/gossip_routing.toml
@@ -44,9 +44,8 @@ actions = [
         ]
 width = 400.0
 height = 400.0
-mobility_model = "RandomWaypoint"
 [protocol]
-Protocol = "ReactiveGossip"
+Protocol = "GossipRouting"
 k = 3
 p = 0.7
 
