--- a/tests/integration/specs/aodv_rerr.toml
+++ b/tests/integration/specs/aodv_rerr.toml
@@ -1,8 +1,10 @@
 name = "aodv_rerr"
 duration = 11000
 actions = [ "Ping node1 node5 1000",
-            "Ping node11 node5 1500",
-            "Kill_Node node4 1650"]
+            "Kill_Node node4 1300",
+            "Kill_Node node10 1300",
+            "Ping node11 node5 1500"
+        ]
 width = 200.0
 height = 200.0
 [protocol]
