--- a/tests/integration/specs/aodv_rerr.toml
+++ b/tests/integration/specs/aodv_rerr.toml
@@ -3,7 +3,7 @@ duration = 11000
 actions = [ "Ping node1 node5 1000",
             "Kill_Node node4 1300",
             "Kill_Node node10 1300",
-            "Ping node11 node5 1500"
+            # "Ping node15 node5 1500"
         ]
 width = 200.0
 height = 200.0
