Data analysis integrated into test specs
Since the processing of the experimental results depends on greping the logs for patterns that are different
for each protocol, they have now been integrated into the test specs. I was unsure about this, since this
is more related to the experimental design than to the tool, but since those patterns don't change unless the
source code changes, it made sense to integrated them with the protocol specifications.

--- a/tests/integration/specs/aodv_route_optimization.toml
+++ b/tests/integration/specs/aodv_route_optimization.toml
@@ -2044,3 +2044,13 @@ interface_name = "wlan1"
 range = 60.0
 
 [available_nodes]
+
+[metadata]
+RD_PATTERN = "SENT.*RREQ"
+RT_PATTERN = "SENT.*RERR"
+RE_PATTERN = "SENT.*RREP"
+DATA_PATTERN = "SENT.*DATA"
+OK_PKT_PATTERN = "ACCEPTED.*DATA"
+ROUTE_BREAK_PATTERN = "BROKEN_LINK detected"
+RD_FAIL_PATTERN = "RREQ retries exceeded"
+MAINTENANCE_PATTERN = "SENT.*HELLO"
