--- a/tests/integration/specs/radio_broadcast_timing.toml
+++ b/tests/integration/specs/radio_broadcast_timing.toml
@@ -98,3 +98,13 @@ Protocol = "NaiveRouting"
         interface_name = "wlan0" 
 
 [available_nodes]
+
+[metadata]
+OK_PKT_PATTERN = "ACCEPTED.*DATA"
+DATA_PATTERN = "SENT.*DATA"
+RD_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+RE_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+RT_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+MAINTENANCE_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+ROUTE_BREAK_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+RD_FAIL_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
