--- a/tests/integration/specs/random_waypoint.toml
+++ b/tests/integration/specs/random_waypoint.toml
@@ -135,4 +135,15 @@ range = 100.0
 reliability = 1.0
 interface_name = "wlan1"
 range = 500.0
+
 [available_nodes]
+
+[metadata]
+OK_PKT_PATTERN = "ACCEPTED.*DATA"
+DATA_PATTERN = "SENT.*DATA"
+RD_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+RE_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+RT_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+MAINTENANCE_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+ROUTE_BREAK_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+RD_FAIL_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
