--- a/tests/integration/specs/rgrIII_basic.toml
+++ b/tests/integration/specs/rgrIII_basic.toml
@@ -635,3 +635,13 @@ interface_name = "wlan1"
 range = 160.0
 
 [available_nodes]
+
+[metadata]
+OK_PKT_PATTERN = "ACCEPTED.*DATA"
+DATA_PATTERN = "SENT.*DATA"
+RD_PATTERN = "SENT.*ROUTE_DISCOVERY"
+RE_PATTERN = "SENT.*ROUTE_ESTABLISH"
+RT_PATTERN = "SENT.*ROUTE_TEARDOWN"
+MAINTENANCE_PATTERN = "SENT.*BEACON"
+ROUTE_BREAK_PATTERN = "Route Teardown initiated"
+RD_FAIL_PATTERN = "ROUTE_DISCOVERY retries exceeded"
